--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Asteroids</title>
 </head>
 
-<body style="text-align: center; background: black; background-image: url(https://s3-us-west-2.amazonaws.com/miscrand/space.jpg)">
+<body style="text-align: center; background: black; background-image: url(https://s3-us-west-2.amazonaws.com/miscrand/minimal-earth.jpg)">
   <canvas height="650px" width="650px"></canvas>
 
   <script src="moving_object.js"></script>
