--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <html>
 <head>
   <title>Asteroids</title>
+  <link href="stylesheet.css" rel="stylesheet">
 </head>
 
-<body style="text-align: center; background: black; background-image: url(https://s3-us-west-2.amazonaws.com/miscrand/minimal-earth.jpg)">
-  <canvas height="650px" width="650px"></canvas>
 
-  <script src="moving_object.js"></script>
-  <script src="asteroid.js"></script>
-  <script src="game.js"></script>
-  <script src="ship.js"></script>
-  <script src="keymaster.js"></script>
-  <script src="bullet.js"></script>
+<body style="text-align: center; background: black; background-image: url(https://s3-us-west-2.amazonaws.com/miscrand/space.jpg)">
+  <div id="main">
+    <p class="keys">WSAD to move. SPACEBAR to fire </p>
+    <canvas id="canvas" height="700" width="700"></canvas>
+
+    <script src="moving_object.js"></script>
+    <script src="asteroid.js"></script>
+    <script src="game.js"></script>
+    <script src="ship.js"></script>
+    <script src="keymaster.js"></script>
+    <script src="bullet.js"></script>
 
 
-  <script>
-    var canvas = document.getElementsByTagName("canvas")[0];
-    var c = canvas.getContext('2d');
-    new Asteroids.Game(c).start();
+    <script>
+      var canvas = document.getElementsByTagName("canvas")[0];
+      var c = canvas.getContext('2d');
+      new Asteroids.Game(c).start();
     </script>
+  </div>
 </body>
 </html>
