setTimeout for bullets

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 
-<body style="text-align: center; background: black; background-image: url(https://s3-us-west-2.amazonaws.com/miscrand/space.jpg)">
+<body>
   <div id="main">
     <p class="keys">WSAD to move. SPACEBAR to fire </p>
     <canvas id="canvas" height="700" width="700"></canvas>
